--- a/TailwindBlog.Web/Components/App.razor
+++ b/TailwindBlog.Web/Components/App.razor
@@ -2,19 +2,20 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <base href="/" />
-    <link rel="stylesheet" href="@Assets["css/app.css"]" />
-    <link rel="stylesheet" href="@Assets["TailwindBlog.Web.styles.css"]" />
-    <ImportMap />
-    <link rel="icon" type="image/png" href="favicon.png" />
-    <HeadOutlet />
+	<title>Tailwind Blog</title>
+	<meta charset="utf-8"/>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+	<base href="/"/>
+	<link rel="stylesheet" href="@Assets["css/app.css"]"/>
+	<link rel="stylesheet" href="@Assets["TailwindBlog.Web.styles.css"]"/>
+	<ImportMap/>
+	<link rel="icon" type="image/png" href="favicon.png"/>
+	<HeadOutlet/>
 </head>
 
 <body>
-    <Routes />
-    <script src="_framework/blazor.web.js"></script>
+<Routes/>
+<script src="_framework/blazor.web.js"></script>
 </body>
 
 </html>
