--- a/TailwindBlog.Web/Components/_Imports.razor
+++ b/TailwindBlog.Web/Components/_Imports.razor
@@ -1,4 +1,5 @@
-﻿@using System.Net.Http
+﻿@using System.Globalization
+@using System.Net.Http
 @using System.Net.Http.Json
 @using Mapster
 @using Microsoft.AspNetCore.Components.Forms
