Update FooterComponent to use dynamic current year

--- a/TailwindBlog.Web/Components/Layout/FooterComponent.razor
+++ b/TailwindBlog.Web/Components/Layout/FooterComponent.razor
@@ -1,12 +1,14 @@
 
 <div class="text-center px-6 py-2 mx-auto xl:max-w-5xl border-t-blue-700">
 
-	<a href="/">© @CurrentYear @_companyName All rights reserved.</a>
+	<a href="/">©@_currentYear @_companyName All rights reserved.</a>
 
 </div>
 
 @code {
 
 	private const string _companyName = "MPaulosky Co.";
+
+	private static readonly string _currentYear = DateTime.Now.Year.ToString();
 
 }
