--- a/Web/Components/Layout/NavMenuComponent.razor
+++ b/Web/Components/Layout/NavMenuComponent.razor
@@ -7,6 +7,7 @@
 			@* 	<span class="p-1">Hey @context.User.Identity?.Name!</span> *@
 			@* </AuthorizeView> *@
 			<a href="/articles" class="p-1 hover:text-blue-700">Articles</a>
+			<a href="/categories" class="p-1 hover:text-blue-700">Categories</a>
 			<a href="/contact" class="p-1 hover:text-blue-700">Contact</a>
 			@* <a href="/profile" class="p-1 hover:text-blue-700">Profile</a> *@
 			<a href="/about" class="p-1 hover:text-blue-700">About</a>
