--- a/Web/Components/Layout/NavMenuComponent.razor
+++ b/Web/Components/Layout/NavMenuComponent.razor
@@ -3,26 +3,43 @@
 	<a href="#" class="block h-8 text-2xl font-semibold hover:text-blue-700">@_siteName</a>
 	<div class="flex items-center">
 		<div class="hidden space-x-2 font-medium sm:block">
-			@* <AuthorizeView> *@
-			@* 	<span class="p-1">Hey @context.User.Identity?.Name!</span> *@
-			@* </AuthorizeView> *@
+			<AuthorizeView>
+				<span class="p-1">Hey @context.User.Identity?.Name!</span>
+			</AuthorizeView>
 			<a href="/articles" class="p-1 hover:text-blue-700">Articles</a>
 			<a href="/categories" class="p-1 hover:text-blue-700">Categories</a>
 			<a href="/contact" class="p-1 hover:text-blue-700">Contact</a>
 			@* <a href="/profile" class="p-1 hover:text-blue-700">Profile</a> *@
 			<a href="/about" class="p-1 hover:text-blue-700">About</a>
-			@* <AuthorizeView> *@
-			@* 	<Authorized> *@
-			@* 		<a href="/user-overview" class="p-1 hover:text-blue-700">Users</a> *@
-			@* *@
-			@* 		<a href="/article-overview" class="p-1 hover:text-blue-700">My Articles</a> *@
-			@* 	</Authorized> *@
-			@* </AuthorizeView> *@
-			@* <Login /> *@
+			<AuthorizeView>
+				<Authorized>
+					<a href="/user-overview" class="p-1 hover:text-blue-700">Users</a>
+
+					<a href="/article-overview" class="p-1 hover:text-blue-700">My Articles</a>
+				</Authorized>
+			</AuthorizeView>
+			<Login/>
 		</div>
 	</div>
 </header>
 
 @code {
+
 	private const string _siteName = "Tailwind Blogs";
+
+	[CascadingParameter] private Task<AuthenticationState>? AuthenticationState { get; set; }
+
+	private string _username = "";
+
+	protected override async Task OnInitializedAsync()
+	{
+
+		if (AuthenticationState is not null)
+		{
+			var state = await AuthenticationState;
+
+			_username = state.User.Identity?.Name ?? string.Empty;
+		}
+	}
+
 }
